# rebs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.linux.sh  build.mac.sh  compile-commands.re.yml  find_source_files.cmake  gen.linux.sh  gen.mac.sh  publish.yml  re-deps-lock.json  re-vscode-launch.py  re.user.yml  re.yml  vcpkg.json  vscode-launch.re.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: build.yml  windows.yml
buildkit/: build-version-info.py  re.yml
buildkit/re/: build_desc.h  buildenv.cpp  buildenv.h  debug.cpp  debug.h  dep_resolver.h  deps_version_cache.cpp  deps_version_cache.h  error.h  fs.h  lang_locator.h  lang_provider.h  path_util.h  process_util.cpp  process_util.h  source_location.h  target.cpp  target.h  target_cfg_utils.cpp  target_cfg_utils.h  target_feature.h  target_load_middleware.h  target_loader.h  user_output.h  vars.cpp  vars.h  version.h  version_impl.h  yaml_merge.cpp  yaml_merge.h
buildkit/re/langs/: cxx_lang_provider.cpp  cxx_lang_provider.h
buildkit/re/langs/cmake/: cmake_lang_provider.cpp  cmake_lang_provider.h  cmake_target_load_middleware.cpp  cmake_target_load_middleware.h
buildkit/re/langs/cxx/: cxx_lang_provider.cpp  cxx_lang_provider.h
buildkit/re/langs/cxx/features/: cpp2_translation.cpp  cpp2_translation.h  cxx_header_projection.cpp  cxx_header_projection.h  source_translation.cpp  source_translation.h
docs/: Doxyfile
examples/: README.md  re.yml
examples/actions-showcase/: README.md  re.yml
examples/cmake-dependencies/: README.md  main.cpp  re.yml
examples/complex-project/: re.yml
examples/complex-project/greeter/: main.cpp  re.yml  things.cpp
examples/complex-project/libhello/: greeting.ixx  re.yml  tests.ixx
examples/complex-project/resources/: hello-template.txt  re.yml
examples/easy-dependencies/: README.md  main.cpp  re.yml
examples/hello-world/: README.md  re.json  re.yml
meta/: re-target.schema.json
re/: CMakeLists.txt  main.cpp
re-tool-build/: CMakeLists.txt  main.cpp
re-tool-install/: CMakeLists.txt
re-tool-new/: CMakeLists.txt
re-tool-run/: CMakeLists.txt  main.cpp
re/data/core-project/: re.yml
re/data/environments/cmdline/: msvc.yml
re/data/environments/cxx/: gcc.yml  msvc.yml
re/data/scripts/windows/: fwd-vcvarsall.cmd
re/root/: re-tool-env.cmd  re.cmd  re.ps1
rebuildkit/: CMakeLists.txt
rebuildkit/re/: build_desc.h  buildenv.cpp  buildenv.h  cxx_lang_provider.cpp  cxx_lang_provider.h  debug.cpp  debug.h  dep_resolver.h  error.h  fs.h  lang_locator.h  lang_provider.h  path_util.h  process_util.cpp  process_util.h  target.cpp  target.h  target_cfg_utils.cpp  target_loader.h  vars.cpp  vars.h
rebuildkit/re-legacy-reference/: target.cpp_  target.h_
rebuildkit/re/langs/: cxx_lang_provider.cpp  cxx_lang_provider.h
resources/: re.yml
resources/data/cmake-adapter/: CMakeLists.txt
resources/data/core-project/: re.yml
resources/data/env-scripts/: msvc.cmd
resources/data/environments/cxx/: clang-cl.yml  clang.msvc.yml  clang.yml  emscripten.yml  gcc.yml  generic.yml  msvc.yml
resources/data/templates/executable/: re.yml
resources/data/templates/project/: re.yml
resources/data/templates/re/compile-commands/: compile-commands-gen.py  compile-commands.re.yml
resources/data/templates/re/deployment/: deployment.re.yml
resources/data/templates/shared-library/: re.yml
resources/data/templates/static-library/: re.yml
resources/data/util-scripts/: compile-commands-gen.py
resources/root/: re.cmd
reutils/: CMakeLists.txt
reutils/re/: list.h  map.h  string.h
setup/: bootstrap-re.ps1  bootstrap-re.py
tool/: main.cpp  re.yml
tool/install/: re.yml
tool/new/: main.cpp  re.yml
tool/run/: main.cpp  re.yml
